Update language files

--- a/LANGUAGES/CATALA/language.ini
+++ b/LANGUAGES/CATALA/language.ini
@@ -1,6 +1,6 @@
 [Language]
 VERSION = 1
-DESCRIPTION = DEFAULT CATALÀ
+DESCRIPTION = DEFAULT CATALÃ€
 
 # VIDEO - ADJUST
 VIDEOADJUST_POSITION    = Utilitza ESQ (-X) / DER (+X) / ADALT (-Y) / ABAIX (+Y) per ajustar la pantalla
@@ -10,15 +10,15 @@ VIDEOADJUST_DEFAULTS    = Prem 'O' pels valors per defecte
 
 # SELECT - GAME FOLDER
 GAMEFOLDER_WANTUSE      = Desitges utilitzar
-GAMEFOLDER_TOINSTALLNTR = per instal·lar els teus jocs?
+GAMEFOLDER_TOINSTALLNTR = per instalÂ·lar els teus jocs?
 GAMEFOLDER_USING        = Utilitzant
-GAMEFOLDER_TOINSTALL    = per instal·lar els teus jocs.
+GAMEFOLDER_TOINSTALL    = per instalÂ·lar els teus jocs.
     
 # DRAW SCREEN1
 DRAWSCREEN_FAVSWAP      = Favorits Intercanvi
 DRAWSCREEN_FAVINSERT    = Favorits Inserir
 DRAWSCREEN_FAVORITES    = Favorits
-DRAWSCREEN_PAGE         = Pàgina
+DRAWSCREEN_PAGE         = PÃ gina
 DRAWSCREEN_GAMES        = Jocs
 DRAWSCREEN_PLAY         = Jugar
 DRAWSCREEN_SOPTIONS     = SELECT: Opcions del Joc
@@ -26,15 +26,15 @@ DRAWSCREEN_SDELETE      = SELECT: Esborrar Favorit
 DRAWSCREEN_STGLOPT      = START: Opcions Globals
 DRAWSCREEN_EXITXMB      = Sortir a XMB?
 DRAWSCREEN_CANRUNFAV    = No es pot executar aquest favorit
-DRAWSCREEN_MARKNOTEXEC  = Assenyalat com a no executable. Intentant la instal·lació en memòria cau (HDD0)
-DRAWSCREEN_MARKNOTEX4G  = Assenyalat com a no executable – Conté fitxers partits >= 4GB
-DRAWSCREEN_GAMEINOFMNT  = No puc trobar on muntar /dev_hdd0/game utilitzant l’USB
+DRAWSCREEN_MARKNOTEXEC  = Assenyalat com a no executable. Intentant la instalÂ·laciÃ³ en memÃ²ria cau (HDD0)
+DRAWSCREEN_MARKNOTEX4G  = Assenyalat com a no executable â€“ ContÃ© fitxers partits >= 4GB
+DRAWSCREEN_GAMEINOFMNT  = No puc trobar on muntar /dev_hdd0/game utilitzant lâ€™USB
 DRAWSCREEN_GAMEIASKDIR  = Desitges crear-ho en /dev_usb00
 DRAWSCREEN_GAMEICANTFD  = No puc trobar un dispositiu USB on muntar /dev_hdd0/game
 DRAWSCREEN_GAMEIWLAUNCH = Desitges executar el Joc?
 DRAWSCREEN_EXTEXENOTFND = executable extern no trobat
-DRAWSCREEN_EXTEXENOTCPY = Utilitza 'Copiar EBOOT.BIN de l’USB' per a importar-ho.
-DRAWSCREEN_REQBR        = El joc requereix d’un Disc-BR al lector@ Desitges reintentar-ho?
+DRAWSCREEN_EXTEXENOTCPY = Utilitza 'Copiar EBOOT.BIN de lâ€™USB' per a importar-ho.
+DRAWSCREEN_REQBR        = El joc requereix dâ€™un Disc-BR al lector@ Desitges reintentar-ho?
 
 # DRAW OPTIONS
 DRAWGMOPT_OPTS          = Opcions
@@ -43,12 +43,12 @@ DRAWGMOPT_CPYGAME       = Copiar Joc
 DRAWGMOPT_DELGAME       = Esborrar Joc
 DRAWGMOPT_FIXGAME       = Arreglar Permisos 
 DRAWGMOPT_TSTGAME       = Comprovar Fitxers
-DRAWGMOPT_CPYEBOOTGAME  = Copiar EBOOT.BIN de l’USB
+DRAWGMOPT_CPYEBOOTGAME  = Copiar EBOOT.BIN de lâ€™USB
 DRAWGMOPT_CPYTOFAV      = Copiar a Favorits
 DRAWGMOPT_DELFMFAV      = Esborrar de Favorits
 
 DRAWGMOPT_FIXCOMPLETE   = Arranjament de Permisos Completat!
-DRAWGMOPT_CPYOK         = còpia finalitzada correctament
+DRAWGMOPT_CPYOK         = cÃ²pia finalitzada correctament
 DRAWGMOPT_CPYERR        = Error copiant
 DRAWGMOPT_CPYNOTFND     = no trobat
 
@@ -61,40 +61,41 @@ DRAWGMCFG_UPD           = Actualitzacions Online
 DRAWGMCFG_ON            = On
 DRAWGMCFG_OFF           = Off
 DRAWGMCFG_EXTBOOT       = Utilitzar EBOOT.BIN Extern
-DRAWGMCFG_BDEMU         = BD Emu (només per a USB)
+DRAWGMCFG_BDEMU         = BD Emu (nomÃ©s per a USB)
 DRAWGMCFG_EXTHDD0GAME   = dev_hdd0/game en Ext. 
-DRAWGMCFG_SAVECFG       = Guardar Configuració 
+DRAWGMCFG_SAVECFG       = Guardar ConfiguraciÃ³ 
 
 # DRAW GLOBAL OPTIONS
 DRAWGLOPT_OPTS          = Opcions Globals
 DRAWGLOPT_SCRADJUST     = Ajustaments de Pantalla
 DRAWGLOPT_CHANGEDIR     = Canviar Directori de Jocs
 DRAWGLOPT_CHANGEBCK     = Canviar Color de Fons
-DRAWGLOPT_SWMUSICOFF    = Desactivar Música
-DRAWGLOPT_SWMUSICON     = Activar Música
+DRAWGLOPT_SWMUSICOFF    = Desactivar MÃºsica
+DRAWGLOPT_SWMUSICON     = Activar MÃºsica
 DRAWGLOPT_INITFTP       = Iniciar Servidor FTP
 DRAWGLOPT_TOOLS         = Eines
-DRAWGLOPT_CREDITS       = Crèdits
-DRAWGLOPT_FTPINITED     = Servidor FTP inicialitzant@Desitges que es reiniciï el servei FTP automàticament cada vegada?
-DRAWGLOPT_FTPARINITED   = Servidor FTP ja està iniciat
-DRAWGLOPT_FTPSTOPED     = Servidor FTP Aturat@Desactivat el reinici del servei FTP a l’iniciar el manager.
+DRAWGLOPT_CREDITS       = CrÃ¨dits
+DRAWGLOPT_FTPINITED     = Servidor FTP inicialitzant@Desitges que es reiniciÃ¯ el servei FTP automÃ ticament cada vegada?
+DRAWGLOPT_FTPARINITED   = Servidor FTP ja estÃ  iniciat
+DRAWGLOPT_FTPSTOPED     = Servidor FTP Aturat@Desactivat el reinici del servei FTP a lâ€™iniciar el manager.
 
 # DRAW TOOLS
 DRAWTOOLS_TOOLS         = Eines
-DRAWTOOLS_DELCACHE      = Esborrat de Fitxers de memòria cau
-# DRAWTOOLS_SECDISABLE    = Desactivació Syscall Security
-# DRAWTOOLS_SECENABLE     = Activació Syscall Security
+DRAWTOOLS_DELCACHE      = Esborrat de Fitxers de memÃ²ria cau
+# DRAWTOOLS_SECDISABLE    = DesactivaciÃ³ Syscall Security
+# DRAWTOOLS_SECENABLE     = ActivaciÃ³ Syscall Security
 # DRAWTOOLS_LOADX         = Sortir i Carregar PS3LoadX
 DRAWTOOLS_PKGTOOLS      = Instalar .PKG
 DRAWTOOLS_COPYFROM      = Copia desde /dev_usb/iris a carpeta Iris
 DRAWTOOLS_WITHBDVD      = Con Controladora BDVD
 DRAWTOOLS_NOBDVD        = Sin Controladora BDVD
+DRAWTOOLS_ARCHIVEMAN    = Manejador de Archivos
 
 # MAIN - OTHERS
-DRAWCACHE_CACHE         = Esborrat de Fitxers memòria cau
+DRAWCACHE_CACHE         = Esborrat de Fitxers memÃ²ria cau
 DRAWCACHE_ERRNEEDIT     = Necessites %1.2f GB lliures per a continuar
-DRAWCACHE_ASKTODEL      = Esborrar %s de la memòria cau?
-PATCHBEMU_ERRNOUSB      = BDEMU s’utilitza només per a dispositius USB
+DRAWCACHE_ASKTODEL      = Esborrar %s de la memÃ²ria cau?
+PATCHBEMU_ERRNOUSB      = BDEMU sâ€™utilitza nomÃ©s per a dispositius USB
 MOVEOBEMU_ERRSAVE       = Errada Guardant:@%s
 MOVEOBEMU_ERRMOVE       = Errada Movent a:@%s/PS3_GAME ja existeix
 MOVEOBEMU_MOUNTOK       = BDEMU muntat a:@%s/PS3_GAME
@@ -112,10 +113,10 @@ FASTCPADD_FAILFASTFILE  = Errada en fast_files(fast_num_files).mem
 # FAST COPY PROCESS
 FASTCPPRC_JOINFILE      = Unint Fitxer
 FASTCPPRC_COPYFILE      = Copiant Fitxer
-FASTCPPTC_OPENERROR     = Errada!!!!!!!!!!!!!!!!!!!!!!!!!@Fitxers Oberts %i@ Espera 20 segons a que es mostri l’errada
+FASTCPPTC_OPENERROR     = Errada!!!!!!!!!!!!!!!!!!!!!!!!!@Fitxers Oberts %i@ Espera 20 segons a que es mostri lâ€™errada
 
 # GAME TEST FILES
-GAMETESTS_FOUNDINSTALL  = Trobat %s@@Desitges instal·lar-ho?
+GAMETESTS_FOUNDINSTALL  = Trobat %s@@Desitges instalÂ·lar-ho?
 GAMETESTS_BIGFILE       = BigFile
 GAMETESTS_TESTFILE      = Comprovant Fitxer
 GAMETESTS_CHECKSIZE     = Comprovant Tam. del Fitxer
@@ -125,19 +126,19 @@ GAMEDELFL_DELETED       = Esborrat
 GAMEDELFL_DELETING      = Esborrant... Fitxer
 
 # GAME COPY
-GAMECPYSL_GSIZEABCNTASK = Comprovació: Avortat - Continuar amb la còpia?
-GAMECPYSL_STARTED       = Iniciant... @ còpia
+GAMECPYSL_GSIZEABCNTASK = ComprovaciÃ³: Avortat - Continuar amb la cÃ²pia?
+GAMECPYSL_STARTED       = Iniciant... @ cÃ²pia
 GAMECPYSL_SPLITEDHDDNFO = %s@@Joc Fraccionat copiat en HDD0 (no es pot iniciar)
 GAMECPYSL_SPLITEDUSBNFO = %s@@Joc Fraccionat copiat en USB00%c (no es pot iniciar)
 GAMECPYSL_DONE          = Acabant! Fitxers Copiats
-GAMECPYSL_FAILDELDUMP   = Desitges Esborrar l’abocament erroni en
+GAMECPYSL_FAILDELDUMP   = Desitges Esborrar lâ€™abocament erroni en
 
 # GAME CACHE COPY
-GAMECHCPY_ISNEEDONEFILE = Ho sento, necessites com a mínim un BigFile per instal·lar
-GAMECHCPY_NEEDMORESPACE = Tens %.2fGB lliures i necessites %.2fGB@@Si us plau, esborra fitxers de la memòria cau
+GAMECHCPY_ISNEEDONEFILE = Ho sento, necessites com a mÃ­nim un BigFile per instalÂ·lar
+GAMECHCPY_NEEDMORESPACE = Tens %.2fGB lliures i necessites %.2fGB@@Si us plau, esborra fitxers de la memÃ²ria cau
 GAMECHCPY_NOSPACE       = Ho sento, tens %.2fGB lliures@@i necessites %.2fGB
-GAMECHCPY_CACHENFOSTART = Fitxers memòria cau: %.2fGB - Total: %.2fGB@ guanyes %.2fGB en HDD0 (%.2fGB Total)@@Prem qualsevol botó per a començar
-GAMECHCPY_FAILDELFROM   = Desitges Esborrar l’abocament de memòria cau erroni des de
+GAMECHCPY_CACHENFOSTART = Fitxers memÃ²ria cau: %.2fGB - Total: %.2fGB@ guanyes %.2fGB en HDD0 (%.2fGB Total)@@Prem qualsevol botÃ³ per a comenÃ§ar
+GAMECHCPY_FAILDELFROM   = Desitges Esborrar lâ€™abocament de memÃ²ria cau erroni des de
 
 # GAME DELETE
 GAMEDELSL_WANTDELETE    = Desitges esborrar des de
@@ -153,9 +154,9 @@ GLUTIL_SPLITFILE        = Fitxer Fraccionat
 GLUTIL_WROTE            = Escrits
 GLUTIL_TIME             = Temps
 GLUTIL_TIMELEFT         = Remanent
-GLUTIL_HOLDTRIANGLEAB   = Manté premut /\ per a Avortar
-GLUTIL_HOLDTRIANGLESK   = Manté premut /\ per a Passar
-GLUTIL_ABORTEDUSER      = Avortat per l’usuari
+GLUTIL_HOLDTRIANGLEAB   = MantÃ© premut /\ per a Avortar
+GLUTIL_HOLDTRIANGLESK   = MantÃ© premut /\ per a Passar
+GLUTIL_ABORTEDUSER      = Avortat per lâ€™usuari
 GLUTIL_ABORTED          = Avortat!!!
 GLUTIL_XEXIT            = Premeu X per a Sortir
 GLUTIL_WANTCPYFROM      = Desitges copiar des de
@@ -166,11 +167,11 @@ GLOBAL_RETURN           = Tornar
 GLOBAL_SAVED            = Fitxer desat
 
 # INSTALL .PKG
-PKG_HEADER              = Utilidad de instalación .PKG -_____Usa EQUIS para seleccionar y CIRCULO para salir
+PKG_HEADER              = Utilidad de instalaciÃ³n .PKG -_____Usa EQUIS para seleccionar y CIRCULO para salir
 PKG_INSERTUSB           = Inserta el dispositivo de alamacenamiento USB
-PKG_ERRTOBIG            = Tamaño de .PKG demasiado grande o poco espacio en disco
+PKG_ERRTOBIG            = TamaÃ±o de .PKG demasiado grande o poco espacio en disco
 PKG_WANTINSTALL         = Quieres instalar este fichero .PKG?
-PKG_ERRALREADY          = Error: .PKG ya está en la pila
+PKG_ERRALREADY          = Error: .PKG ya estÃ¡ en la pila
 PKG_ERRFULLSTACK        = Error: pila llena (max 16 entradas)
 PKG_ERRBUILD            = Error construyendo el proceso .PKG
 PKG_COPYING             = Copiando fichero .PKG a la carpeta de Iris Manager...
@@ -182,28 +183,28 @@ PKG_ERRMOVING           = Error Moviendo .PKG
    
 # DRAW_PSX
 DRAWPSX_EMULATOR        = Emulador
-DRAWPSX_VIDEOPS         = PSX Opciones de Vídeo
+DRAWPSX_VIDEOPS         = PSX Opciones de VÃ­deo
 DRAWPSX_SAVEASK         = Salvar opciones PSX?
 DRAWPSX_SAVED           = Optiones PSX Salvadas
-DRAWPSX_VIDEOTHER       = Vídeo / Otras
-DRAWPSX_VIDEOMODE        = Modo de Vídeo
-DRAWPSX_VIDEOASP        = Aspecto Vídeo (480/576)
+DRAWPSX_VIDEOTHER       = VÃ­deo / Otras
+DRAWPSX_VIDEOMODE        = Modo de VÃ­deo
+DRAWPSX_VIDEOASP        = Aspecto VÃ­deo (480/576)
 DDRAWPSX_FULLSC         = Pantalla Completa
 DRAWPSX_SMOOTH          = Suavizado
 DRAWPSX_EXTROM          = ROM Externa
 DRAWPSX_FORMAT          = Formatear Internal_MC
-DRAWPSX_ASKFORMAT       = Quieres formatear Internal_MC?@@Perderás lo salvado en esta operación
+DRAWPSX_ASKFORMAT       = Quieres formatear Internal_MC?@@PerderÃ¡s lo salvado en esta operaciÃ³n
 DRAWPSX_ERRWRITING      = Error escribiendo el fichero (Dispositivo lleno?)
 DRAWPSX_BUILDISO        = Construyendo custom ISO...
 DRAWPSX_ASKCHEATS       = Disco PSX de Cheats encontrado@@Quieres usarlo?
 DRAWPSX_ERRCHEATS       = PSX Disc para Cheats no puede ser lanzado@@sin un juego de PSX
-DRAWPSX_ERRSECSIZE      = Error: Tamaño diferente de sector en ficheros ISO
-DRAWPSX_ERRUNKSIZE      = Error: Tamaño de Sector Desconocido
+DRAWPSX_ERRSECSIZE      = Error: TamaÃ±o diferente de sector en ficheros ISO
+DRAWPSX_ERRUNKSIZE      = Error: TamaÃ±o de Sector Desconocido
 DRAWPSX_DISCEJECT       = PSX CD Expulsado
 DRAWPSX_DISCORDER       = Selecciona el orden de los Discos
 DRAWPSX_PRESSOB         = Pulsa O para cambiar el orden
 DRAWPSX_PRESSXB         = Pulsa X para lanzar el juego
-DRAWPSX_CHEATMAKE       = Disco PSX de Cheats encontrado, pero tamaño de sector diferente@@Quieres construir uno compatible?
+DRAWPSX_CHEATMAKE       = Disco PSX de Cheats encontrado, pero tamaÃ±o de sector diferente@@Quieres construir uno compatible?
 DRAWPSX_COPYMC          = Copiando Memory Card a HDD0...
 DRAWPSX_ERRCOPYMC       = Error copiando la Memory Card en HDD0
 DRAWPSX_PUTFNAME        = Introduce un Nombre de Carpeta:
