--- a/LANGUAGES/ITALIAN/language.ini
+++ b/LANGUAGES/ITALIAN/language.ini
@@ -85,9 +85,9 @@ DRAWTOOLS_DELCACHE      = Elimina i file dalla memoria
 # DRAWTOOLS_SECDISABLE    = Premere per Disattivare la Syscall Security
 # DRAWTOOLS_SECENABLE     = Premere per Attivare la Syscall Security
 DRAWTOOLS_PKGTOOLS      = Installazione di pacchetti .PKG
-DRAWTOOLS_COPYFROM      = Copy from /dev_usb/iris to Iris folder
-DRAWTOOLS_WITHBDVD      = With BDVD Controller
-DRAWTOOLS_NOBDVD        = Without BDVD Controller
+DRAWTOOLS_COPYFROM      = Copia da /dev_usb/iris alla cartella di Iris
+DRAWTOOLS_WITHBDVD      = Con BDVD Controller
+DRAWTOOLS_NOBDVD        = Senza BDVD Controller
 DRAWTOOLS_NOBDVD2       = Disc - Less payload
 DRAWTOOLS_ARCHIVEMAN    = Archive Manager
 
@@ -167,27 +167,27 @@ GLOBAL_RETURN           = Torna indietro
 GLOBAL_SAVED            = File Salvato
 
 # INSTALL .PKG
-PKG_HEADER              = Install .PKG Utility -_____Use CROSS to select and CIRCLE to exit
-PKG_INSERTUSB           = Insert the USB mass storage device
+PKG_HEADER              = Installare il .PKG Utility -_____Usare CROSS e select e CIRCLE per uscire
+PKG_INSERTUSB           = Inserire il dispositivo di archiviazione di massa USB
 PKG_ERRTOBIG            = .PKG size too big or disk space small
-PKG_WANTINSTALL         = Want to Install this .PKG file?
+PKG_WANTINSTALL         = Vuoi installare questo file .PKG ?
 PKG_ERRALREADY          = Error: .PKG already in the stack
 PKG_ERRFULLSTACK        = Error: stack is full (max 16 entries)
 PKG_ERRBUILD            = Error Building .PKG process
-PKG_COPYING             = Copying .PKG file to Iris Manager folder...
-PKG_ERROPENING          = Error Opening .PKG file
-PKG_ERRCREATING         = Error Creating .PKG file
-PKG_ERRREADING          = Error Reading .PKG file
-PKG_ERRLICON            = Error Loading ICON file
-PKG_ERRMOVING           = Error moving .PKG
+PKG_COPYING             = Copia del file .PKG nella cartella di Iris Manager ...
+PKG_ERROPENING          = Errore nell'apertura del file .PKG
+PKG_ERRCREATING         = Errore nella creazione del file .PKG
+PKG_ERRREADING          = Errore nella lettura del file .PKG
+PKG_ERRLICON            = Errore nel caricamento del file ICON
+PKG_ERRMOVING           = Errore nello spostamento del file .PKG
 
 # DRAW_PSX
-DRAWPSX_EMULATOR        = Emulator
+DRAWPSX_EMULATOR        = Emulatore
 DRAWPSX_VIDEOPS         = PSX Video Options
-DRAWPSX_SAVEASK         = Save PSX options?
+DRAWPSX_SAVEASK         = Salvare le opzioni PSX ?
 DRAWPSX_SAVED           = PSX Options Saved
 DRAWPSX_VIDEOTHER       = Video / Others
-DRAWPSX_VIDEOMODE       = Video Mode
+DRAWPSX_VIDEOMODE       = Modalita' Video
 DRAWPSX_VIDEOASP        = Video Aspect (480/576)
 DRAWPSX_FULLSC          = Full Screen
 DRAWPSX_SMOOTH          = Smooting
