--- a/LANGUAGES/ITALIAN/language.ini
+++ b/LANGUAGES/ITALIAN/language.ini
@@ -183,41 +183,41 @@ PKG_ERRMOVING           = Errore nello spostamento del file .PKG
 
 # DRAW_PSX
 DRAWPSX_EMULATOR        = Emulatore
-DRAWPSX_VIDEOPS         = PSX Video Options
+DRAWPSX_VIDEOPS         = Opzioni PSX Video 
 DRAWPSX_SAVEASK         = Salvare le opzioni PSX ?
-DRAWPSX_SAVED           = PSX Options Saved
-DRAWPSX_VIDEOTHER       = Video / Others
+DRAWPSX_SAVED           = Opzioni PSX salvate
+DRAWPSX_VIDEOTHER       = Video / Altro
 DRAWPSX_VIDEOMODE       = Modalita' Video
-DRAWPSX_VIDEOASP        = Video Aspect (480/576)
+DRAWPSX_VIDEOASP        = Risoluzione Video (480/576)
 DRAWPSX_FULLSC          = Full Screen
 DRAWPSX_SMOOTH          = Smooting
-DRAWPSX_EXTROM          = External ROM
-DRAWPSX_FORMAT          = Format Internal_MC
-DRAWPSX_ASKFORMAT       = Want you format Internal_MC?@@You LOSE the saves in this operation
-DRAWPSX_ERRWRITING      = Error writing the file (Device full?)
+DRAWPSX_EXTROM          = ROM esterna
+DRAWPSX_FORMAT          = Formattare la memory card interna
+DRAWPSX_ASKFORMAT       = Vuoi formattare la Memory Card interna?@@Perderai i salvataggi in questa operazione
+DRAWPSX_ERRWRITING      = Errore nella scrittura del file (Dispositivo pieno?)
 DRAWPSX_BUILDISO        = Building custom ISO...
 DRAWPSX_ASKCHEATS       = PSX Cheat disc found@@Want you use it?
-DRAWPSX_ERRCHEATS       = PSX Disc for Cheats cannot be launched@@without a PSX game
-DRAWPSX_ERRSECSIZE      = Error: Different sector size in ISO files
-DRAWPSX_ERRUNKSIZE      = Error: Unknown Sector Size
-DRAWPSX_DISCEJECT       = PSX CD Ejected
-DRAWPSX_DISCORDER       = Select Disc Order
-DRAWPSX_PRESSOB         = Press CIRCLE to change the order
-DRAWPSX_PRESSXB         = Press CROSS to launch de game
-DRAWPSX_CHEATMAKE       = PSX Cheat disc found, but different sector size@@Want you build one compatible?
-DRAWPSX_ERRCOPYMC       = Copying Memory Card to HDD0 device...
-DRAWPSX_PRESSXB         = Error copying the Memory Card to HDD0 device
-DRAWPSX_PUTFNAME        = Put a Folder Name:
-DRAWPSX_FMUSTB          = Folder Name must be >=3 chars
-DRAWPSX_PUTADISC        = Put a PSX disc and press YES to continue or NO to abort@@Disc to copy: 
+DRAWPSX_ERRCHEATS       = Il Disco PSX per Cheats non puo' essere avviato@@senza un gioco PSX 
+DRAWPSX_ERRSECSIZE      = Errore: Differenti spazi nei settori dei files ISO 
+DRAWPSX_ERRUNKSIZE      = Errore: Sconosciuto spazio nei settori
+DRAWPSX_DISCEJECT       = Espulsione del CD PSX
+DRAWPSX_DISCORDER       = Selezionare l'ordine nel Disco
+DRAWPSX_PRESSOB         = Premere CIRCLE per cambiare l'ordine
+DRAWPSX_PRESSXB         = Premere CROSS per avviare il gioco
+DRAWPSX_CHEATMAKE       = PSX Cheat disc found, but different sector size@@Desideri che si generi uno compatibile?
+DRAWPSX_ERRCOPYMC       = Copia in corso della Memory Card nell' HDD0 ...
+DRAWPSX_PRESSXB         = Errore nella copia della Memory Card nel dispositivo HDD0 
+DRAWPSX_PUTFNAME        = Inserire un nome alla cartella:
+DRAWPSX_FMUSTB          = Il nome della cartella deve avere almeno >=3 caratteri
+DRAWPSX_PUTADISC        = Inseire un disco PSX e premere YES per continuare o NO per non avviare@@Disco da copiare: 
 DRAWPSX_UNREC           = Unrecognized disc
-DRAWPSX_ERROPENING      = Error opening BDVD drive
-DRAWPSX_ASKEFOLDER      = Folder Exits@@Continue?
-DRAWPSX_ISOEXITS        = exists@@Skip?
+DRAWPSX_ERROPENING      = Errore nell'apertura del drive BDVD
+DRAWPSX_ASKEFOLDER      = Cartella esistente@@Continuare?
+DRAWPSX_ISOEXITS        = esistente@@Saltare?
        
 # generic
 OUT_OFMEMORY            = Out of Memory
 OPERATION_DONE          = Done!
 PLUG_STORAGE1           = Remember you to plug an USB storage massive device to create the fake disc event
-PLUG_STORAGE2           = Fake Disc Inserted
+PLUG_STORAGE2           = Disco Inserito non corretto
 
