--- a/LANGUAGES/ITALIAN/language.ini
+++ b/LANGUAGES/ITALIAN/language.ini
@@ -183,37 +183,37 @@ PKG_ERRMOVING           = Errore nello spostamento del file .PKG
 
 # DRAW_PSX
 DRAWPSX_EMULATOR        = Emulatore
-DRAWPSX_VIDEOPS         = PSX Video Options
+DRAWPSX_VIDEOPS         = Opzioni PSX Video 
 DRAWPSX_SAVEASK         = Salvare le opzioni PSX ?
-DRAWPSX_SAVED           = PSX Options Saved
-DRAWPSX_VIDEOTHER       = Video / Others
+DRAWPSX_SAVED           = Opzioni PSX Salvate
+DRAWPSX_VIDEOTHER       = Video / Altro
 DRAWPSX_VIDEOMODE       = Modalita' Video
-DRAWPSX_VIDEOASP        = Video Aspect (480/576)
+DRAWPSX_VIDEOASP        = Modalita' Video (480/576)
 DRAWPSX_FULLSC          = Full Screen
 DRAWPSX_SMOOTH          = Smooting
 DRAWPSX_EXTROM          = External ROM
-DRAWPSX_FORMAT          = Format Internal_MC
+DRAWPSX_FORMAT          = Formato Internal_MC
 DRAWPSX_ASKFORMAT       = Want you format Internal_MC?@@You LOSE the saves in this operation
-DRAWPSX_ERRWRITING      = Error writing the file (Device full?)
+DRAWPSX_ERRWRITING      = Errore nella scrittura del file (Dispositivo pieno?)
 DRAWPSX_BUILDISO        = Building custom ISO...
-DRAWPSX_ASKCHEATS       = PSX Cheat disc found@@Want you use it?
-DRAWPSX_ERRCHEATS       = PSX Disc for Cheats cannot be launched@@without a PSX game
-DRAWPSX_ERRSECSIZE      = Error: Different sector size in ISO files
-DRAWPSX_ERRUNKSIZE      = Error: Unknown Sector Size
-DRAWPSX_DISCEJECT       = PSX CD Ejected
-DRAWPSX_DISCORDER       = Select Disc Order
-DRAWPSX_PRESSOB         = Press CIRCLE to change the order
-DRAWPSX_PRESSXB         = Press CROSS to launch de game
+DRAWPSX_ASKCHEATS       = PSX Cheat disc found@@Vuoi tu usare questo?
+DRAWPSX_ERRCHEATS       = PSX Disc for Cheats cannot be launched@@senza un gioco PSX
+DRAWPSX_ERRSECSIZE      = Errore: Differenti spazi nell' ISO files
+DRAWPSX_ERRUNKSIZE      = Errore: Sconosciuti dimensioni dei spazi
+DRAWPSX_DISCEJECT       = Espulsione del CD PSX
+DRAWPSX_DISCORDER       = Selezionare l'ordine del disco
+DRAWPSX_PRESSOB         = Premere CIRCLE per cambiare l'ordine
+DRAWPSX_PRESSXB         = Premere CROSS per avviare il gioco
 DRAWPSX_CHEATMAKE       = PSX Cheat disc found, but different sector size@@Want you build one compatible?
 DRAWPSX_ERRCOPYMC       = Copying Memory Card to HDD0 device...
 DRAWPSX_PRESSXB         = Error copying the Memory Card to HDD0 device
-DRAWPSX_PUTFNAME        = Put a Folder Name:
-DRAWPSX_FMUSTB          = Folder Name must be >=3 chars
-DRAWPSX_PUTADISC        = Put a PSX disc and press YES to continue or NO to abort@@Disc to copy: 
-DRAWPSX_UNREC           = Unrecognized disc
-DRAWPSX_ERROPENING      = Error opening BDVD drive
-DRAWPSX_ASKEFOLDER      = Folder Exits@@Continue?
-DRAWPSX_ISOEXITS        = exists@@Skip?
+DRAWPSX_PUTFNAME        = Inserire un nome alla cartella:
+DRAWPSX_FMUSTB          = Il Nome della cartella deve avere almeno >=3 chars
+DRAWPSX_PUTADISC        = Inserire un disco PSX e premere YES per continuare o NO per abortire@@Disc to copy: 
+DRAWPSX_UNREC           = Disco non riconosciuto
+DRAWPSX_ERROPENING      = Errore nell'apertura del drive BDVD 
+DRAWPSX_ASKEFOLDER      = Cartella esistente@@Continuare?
+DRAWPSX_ISOEXITS        = esistente@@Saltare?
        
 # generic
 OUT_OFMEMORY            = Out of Memory
