Update Languages for 2.50

--- a/LANGUAGES/CATALA/language.ini
+++ b/LANGUAGES/CATALA/language.ini
@@ -68,8 +68,9 @@ DRAWGMCFG_SAVECFG       = Guardar Configuració
 # DRAW GLOBAL OPTIONS
 DRAWGLOPT_OPTS          = Opcions Globals
 DRAWGLOPT_SCRADJUST     = Ajustaments de Pantalla
-DRAWGLOPT_CHANGEDIR     = Canviar Directori de Jocs
+DRAWGLOPT_CHANGEGUI     = Cambiar GUI Actual
 DRAWGLOPT_CHANGEBCK     = Canviar Color de Fons
+DRAWGLOPT_CHANGEDIR     = Canviar Directori de Jocs
 DRAWGLOPT_SWMUSICOFF    = Desactivar Música
 DRAWGLOPT_SWMUSICON     = Activar Música
 DRAWGLOPT_INITFTP       = Iniciar Servidor FTP
