translation is partial for now
it's translated up to DRAWTOOLS_TOOLS

--- a/LANGUAGES/POLISH/language.ini
+++ b/LANGUAGES/POLISH/language.ini
@@ -1,6 +1,6 @@
 ﻿[Language]
 VERSION = 2
-DESCRIPTION = DEFAULT ENGLISH
+DESCRIPTION = DEFAULT POLISH
 
 # VIDEO - ADJUST
 VIDEOADJUST_POSITION    = W lewo (-X) / w prawo (+X) / Do gory (-Y) / W dul (+Y) zeby ustawic ekran
@@ -76,12 +76,12 @@ DRAWGLOPT_SWMUSICON     = Wlaczyc muzyke.
 DRAWGLOPT_INITFTP       = Inicjalizacja serwera FTP
 DRAWGLOPT_TOOLS         = Narzedzia
 DRAWGLOPT_CREDITS       = Kredyty
-DRAWGLOPT_FTPINITED     = icjalizacja serwera FTP@czy chcesz auto-wlacz usluge FTP na pocz?
+DRAWGLOPT_FTPINITED     = inicjalizacja serwera FTP@czy chcesz auto-wlacz usluge FTP na pocz?
 DRAWGLOPT_FTPARINITED   = Serwer FTP juz ma ustawione parametry poczatkowe
 DRAWGLOPT_FTPSTOPED     = Serwer FTP zatrzymany@usunac usluge FTP na pocz.
 
 # DRAW TOOLS
-DRAWTOOLS_TOOLS         = Tools
+DRAWTOOLS_TOOLS         = Narzędzia
 DRAWTOOLS_DELCACHE      = Delete Cache Tool
 # DRAWTOOLS_SECDISABLE    = Press To Disable Syscall Security
 # DRAWTOOLS_SECENABLE     = Press To Enable Syscall Security
