--- a/LANGUAGES/CATALA/language.ini
+++ b/LANGUAGES/CATALA/language.ini
@@ -46,6 +46,11 @@ DRAWGMOPT_TSTGAME       = Comprovar Fitxers
 DRAWGMOPT_CPYEBOOTGAME  = Copiar EBOOT.BIN de l’USB
 DRAWGMOPT_CPYTOFAV      = Copiar a Favorits
 DRAWGMOPT_DELFMFAV      = Esborrar de Favorits
+DRAWGMOPT_EXTRACTISO    = Extraer ISO
+DRAWGMOPT_BUILDISO      = Crear ISO
+DRAWGMOPT_MKISO         = Selecciona un dispositivo para Crear la ISO
+DRAWGMOPT_XTISO         = Selecciona un dispositivo para Extraer la ISO
+DRAWGMOPT_CPYISO        = Selecciona un dispositivo para Copiar la ISO
 
 DRAWGMOPT_FIXCOMPLETE   = Arranjament de Permisos Completat!
 DRAWGMOPT_CPYOK         = còpia finalitzada correctament
