--- a/LANGUAGES/GALEGO/language.ini
+++ b/LANGUAGES/GALEGO/language.ini
@@ -46,6 +46,11 @@ DRAWGMOPT_TSTGAME       = Comprobar Ficheiros
 DRAWGMOPT_CPYEBOOTGAME  = Copiar EBOOT.BIN do USB
 DRAWGMOPT_CPYTOFAV      = Copiar ós Favoritos
 DRAWGMOPT_DELFMFAV      = Borrar dos Favoritos
+DRAWGMOPT_EXTRACTISO    = Extraer ISO
+DRAWGMOPT_BUILDISO      = Crear ISO
+DRAWGMOPT_MKISO         = Selecciona un dispositivo para Crear la ISO
+DRAWGMOPT_XTISO         = Selecciona un dispositivo para Extraer la ISO
+DRAWGMOPT_CPYISO        = Selecciona un dispositivo para Copiar la ISO
 
 DRAWGMOPT_FIXCOMPLETE   = Arreglo dos Permisos rematado!
 DRAWGMOPT_CPYOK         = Copia rematada correctamente
