--- a/LANGUAGES/PORTUGUESE/language.ini
+++ b/LANGUAGES/PORTUGUESE/language.ini
@@ -15,15 +15,15 @@ GAMEFOLDER_USING        = Usando
 GAMEFOLDER_TOINSTALL    = para instalar o jogo
     
 # DRAW SCREEN1
-DRAWSCREEN_FAVSWAP      = Favoritos de Câmbio
-DRAWSCREEN_FAVINSERT    = Favoritos Inserir
+DRAWSCREEN_FAVSWAP      = Trocar Favoritos
+DRAWSCREEN_FAVINSERT    = Inserir Favoritos
 DRAWSCREEN_FAVORITES    = Favoritos
 DRAWSCREEN_PAGE         = Página
 DRAWSCREEN_GAMES        = Jogos
-DRAWSCREEN_PLAY         = Joga
+DRAWSCREEN_PLAY         = Jogar
 DRAWSCREEN_SOPTIONS     = SELECT: Opções de Jogo
-DRAWSCREEN_SDELETE      = SELECT: Deletar Favoritos
-DRAWSCREEN_STGLOPT      = START: Opções Globais
+DRAWSCREEN_SDELETE      = SELECT: Excluir Favoritos
+DRAWSCREEN_STGLOPT      = START: Opções Gerais
 DRAWSCREEN_EXITXMB      = Sair e voltar para o XMB?
 DRAWSCREEN_CANRUNFAV    = Não pode executar este favorito
 DRAWSCREEN_MARKNOTEXEC  = Marcado como não-inicializável. Tateou para instalar o Cache (HDD0)
@@ -33,24 +33,24 @@ DRAWSCREEN_GAMEIASKDIR  = Quer criar em /dev_usb00
 DRAWSCREEN_GAMEICANTFD  = Não consigo encontrar um dispositivo USB para montar /dev_hdd0/game a partir de USB
 DRAWSCREEN_GAMEIWLAUNCH = Quer iniciar o Jogo?
 DRAWSCREEN_EXTEXENOTFND = executável externo não encontrado
-DRAWSCREEN_EXTEXENOTCPY = Use 'Copy EBOOT.BIN from USB' to import them.
+DRAWSCREEN_EXTEXENOTCPY = Use 'Copy EBOOT.BIN from USB' para importá-los.
 DRAWSCREEN_REQBR        = O jogo requer um Disco-BR no leitor@ Quer tentar novamente?
 
 # DRAW OPTIONS
 DRAWGMOPT_OPTS          = Opções
 DRAWGMOPT_CFGGAME       = Config. Jogo
 DRAWGMOPT_CPYGAME       = Copiar Jogo
-DRAWGMOPT_DELGAME       = Deletar Jogo
+DRAWGMOPT_DELGAME       = Excluir Jogo
 DRAWGMOPT_FIXGAME       = Corrigir Permissões de Arquivos
-DRAWGMOPT_TSTGAME       = Ensaiar Jogo
+DRAWGMOPT_TSTGAME       = Testar Jogo
 DRAWGMOPT_CPYEBOOTGAME  = Copiar EBOOT.BIN de USB
 DRAWGMOPT_CPYTOFAV      = Copiar para Favoritos
-DRAWGMOPT_DELFMFAV      = Deletar do Favoritos
-DRAWGMOPT_EXTRACTISO    = Extract ISO
-DRAWGMOPT_BUILDISO      = Build ISO
-DRAWGMOPT_MKISO         = Select a device to Build the ISO
-DRAWGMOPT_XTISO         = Select a device to Extract the ISO
-DRAWGMOPT_CPYISO        = Select a device to Copy the ISO
+DRAWGMOPT_DELFMFAV      = Excluir dos Favoritos
+DRAWGMOPT_EXTRACTISO    = Extrair ISO
+DRAWGMOPT_BUILDISO      = Construir ISO
+DRAWGMOPT_MKISO         = Selecione um dispositivo para construir a ISO
+DRAWGMOPT_XTISO         = Selecione um dispositivo para Extrair a ISO
+DRAWGMOPT_CPYISO        = Selecione um dispotivo para Copiar a ISO
 
 DRAWGMOPT_FIXCOMPLETE   = Corrigir Permissões Feito!
 DRAWGMOPT_CPYOK         = cópia foi concluída com êxito
@@ -71,32 +71,32 @@ DRAWGMCFG_EXTHDD0GAME   = /dev_hdd0/game Externo
 DRAWGMCFG_SAVECFG       = Guardar a Config.
 
 # DRAW GLOBAL OPTIONS
-DRAWGLOPT_OPTS          = Opções Globais
-DRAWGLOPT_SCRADJUST   	= Vídeo Configuração
-DRAWGLOPT_CHANGEGUI     = Change Current GUI
+DRAWGLOPT_OPTS          = Opções Gerais
+DRAWGLOPT_SCRADJUST   	= Configuração de Vídeo
+DRAWGLOPT_CHANGEGUI     = Mudar GUI atual
 DRAWGLOPT_CHANGEBCK     = Alterar Cor de Fundo
 DRAWGLOPT_CHANGEDIR     = Alterar Diretório do Jogo
-DRAWGLOPT_SWMUSICOFF    = Alterne Música Off
-DRAWGLOPT_SWMUSICON     = Alterne Música On
+DRAWGLOPT_SWMUSICOFF    = Alternar para Música desligada
+DRAWGLOPT_SWMUSICON     = Alterne Música Ligada
 DRAWGLOPT_INITFTP		= Iniciar Servidor FTP
 DRAWGLOPT_TOOLS         = Ferramentas
 DRAWGLOPT_CREDITS       = Créditos
-DRAWGLOPT_FTPINITED   = Servidor FTP inicializado@Quer serviço FTP é reiniciado automaticamente a cada vez??
-DRAWGLOPT_FTPARINITED = Servidor FTP já inicializada
+DRAWGLOPT_FTPINITED   = Servidor FTP inicializado@Quer que o serviço FTP seja reiniciado automaticamente a cada vez??
+DRAWGLOPT_FTPARINITED = Servidor FTP já inicializado
 DRAWGLOPT_FTPSTOPED   = Servidor FTP Parou@Desativar o serviço de FTP reiniciar para começar.
 
 # DRAW TOOLS
 DRAWTOOLS_TOOLS         = Ferramentas
 DRAWTOOLS_DELCACHE      = Apagar arquivos de cache
-DRAWTOOLS_PKGTOOLS      = .PKG Instalar
+DRAWTOOLS_PKGTOOLS      = Instalar .PKG
 DRAWTOOLS_COPYFROM      = Cópia a partir /dev_usb/PS3ITA a PS3ITA Manager
 DRAWTOOLS_WITHBDVD      = Com BDVD Controller
 DRAWTOOLS_NOBDVD        = Sem BDVD Controller
 DRAWTOOLS_NOBDVD2       = Disc - Less payload
-DRAWTOOLS_ARCHIVEMAN    = Archive Manager
+DRAWTOOLS_ARCHIVEMAN    = Gerenciador de arquivos
 
 # MAIN - OTHERS
-DRAWCACHE_CACHE         = Deletar Ferramenta Cache
+DRAWCACHE_CACHE         = Excluir Ferramenta Cache
 DRAWCACHE_ERRNEEDIT     = É necessário %1.2f GB livre para instalar
 DRAWCACHE_ASKTODEL      = Deletar %s Cache?
 PATCHBEMU_ERRNOUSB      = BDEMU é apenas para dispositivos USB
@@ -134,11 +134,11 @@ GAMECPYSL_GSIZEABCNTASK = Obtenha Tamanho: Abortado - Continuar a cópia?
 GAMECPYSL_STARTED       = Começando... @ cópia
 GAMECPYSL_SPLITEDHDDNFO = %s@@Dividir jogo copiado em HDD0 (não inicializável)
 GAMECPYSL_SPLITEDUSBNFO = %s@@Dividir jogo copiado em USB00%c (não inicializável)
-GAMECPYSL_DONE          = Concluído! Files Copied
-GAMECPYSL_FAILDELDUMP   = Quer apagar despejo falhou em
+GAMECPYSL_DONE          = Concluído! Arquivos copiados
+GAMECPYSL_FAILDELDUMP   = Quer apagar despejo falho em
 
 # GAME CACHE COPY
-GAMECHCPY_ISNEEDONEFILE = Desculpe, você precisa pelo menos para instalar BIGFILE
+GAMECHCPY_ISNEEDONEFILE = Desculpe, você precisa instalar pelo menos um BIGFILE
 GAMECHCPY_NEEDMORESPACE = Você tem %.2fGB livre e você precisa %.2fGB@@Por favor, apague as entradas de Cache
 GAMECHCPY_NOSPACE       = Desculpe, você tem %.2fGB livre@@e você precisa %.2fGB
 GAMECHCPY_CACHENFOSTART = Arquivos de Cache: %.2fGB - Total de Arquivos: %.2fGB@ você salvar %.2fGB em HDD0 (%.2fGB Total)@@Pressione qualquer tecla para iniciar
@@ -147,23 +147,23 @@ GAMECHCPY_FAILDELFROM   = Quer apagar despejo Cache falho desde
 # GAME DELETE
 GAMEDELSL_WANTDELETE    = Você deseja remover
 GAMEDELSL_STARTED       = Começando... @ eliminação
-GAMEDELSL_DONE          = Concluído!  Arquivos Deletados
+GAMEDELSL_DONE          = Concluído!  Arquivos Excluídos
 
 # GAME TEST
 GAMETSTSL_FINALNFO      = Pastas: %i Arquivos: %i@Arquivos Grandes: %i Dividir Arquivos: %i
-GAMETSTSL_TESTED        = Files Tested
+GAMETSTSL_TESTED        = Arquivos testados
 
 #GLOBAL UTILS
 GLUTIL_SPLITFILE        = Dividir Arquivo
-GLUTIL_WROTE            = Escreveu
+GLUTIL_WROTE            = Escrito
 GLUTIL_TIME             = Tempo
 GLUTIL_TIMELEFT         = Tempo Restante
 GLUTIL_HOLDTRIANGLEAB   = Segure TRIÂNGULO para Abortar
 GLUTIL_HOLDTRIANGLESK   = Segure TRIÂNGULO para Passar
 GLUTIL_ABORTEDUSER      = Abortada pelo usuário
 GLUTIL_ABORTED          = Abortado!!!
-GLUTIL_XEXIT            = Imprensa CROSS para Sair
-GLUTIL_WANTCPYFROM      = Queira copiar de
+GLUTIL_XEXIT            = Pressione CROSS para Sair
+GLUTIL_WANTCPYFROM      = Quer copiar de
 GLUTIL_WTO              = a
 
 # GLOBAL
@@ -203,20 +203,20 @@ DRAWPSX_BUILDISO        = Construção de costume ISO...
 DRAWPSX_ASKCHEATS       = Disco PSX Cheats encontrado@@Quer usar?
 DRAWPSX_ERRCHEATS       = Cheats para PSX disco não pode ser lançado@@sem um jogo de PSX
 DRAWPSX_ERRSECSIZE      = Erro: tamanho do setor diferente de arquivos ISO
-DRAWPSX_ERRUNKSIZE      = Erro: Sector Unknown Tamanho
+DRAWPSX_ERRUNKSIZE      = Erro: Sector de tamanho desconhecido
 DRAWPSX_DISCEJECT       = PSX CD Ejetado
-DRAWPSX_DISCORDER       = Selecione Disco Ordem
+DRAWPSX_DISCORDER       = Selecione ordem de disco 
 DRAWPSX_PRESSOB         = Pressione CÍRCULO para alterar a ordem
 DRAWPSX_PRESSXB         = Pressione CROSS para iniciar o jogo
 DRAWPSX_CHEATMAKE       = Disco PSX Cheats encontrado, mas o tamanho do setor diferente@@Quer você construir um compatível?
 DRAWPSX_COPYMC          = Copiando Memory Card de HDD0 dispositivo...
-DRAWPSX_ERRCOPYMC       = Error copying the Memory Card to HDD0 device
-DRAWPSX_PUTFNAME        = Put a Folder Name:
-DRAWPSX_FMUSTB          = Folder Name must be >=3 chars
-DRAWPSX_PUTADISC        = Put a PSX disc and press YES to continue or NO to abort@@Disc to copy: 
-DRAWPSX_UNREC           = Unrecognized disc
-DRAWPSX_ERROPENING      = Error opening BDVD drive
-DRAWPSX_ASKEFOLDER      = Folder Exits@@Continue?
+DRAWPSX_ERRCOPYMC       = Erro ao copiar o Memory Card para o dispositivo HDD0
+DRAWPSX_PUTFNAME        = Coloque o nome da pasta:
+DRAWPSX_FMUSTB          = O nome da pasta deve ser >=3 caract.
+DRAWPSX_PUTADISC        = Coloque um disco de PSX e pressione YES para continuar ou Não para abortar@@Disc to copy: 
+DRAWPSX_UNREC           = Disco não reconhecido
+DRAWPSX_ERROPENING      = Erro ao abrir o drive BDVD
+DRAWPSX_ASKEFOLDER      = Pasta existente@@Continuar?
 DRAWPSX_ISOEXITS        = exists@@Skip?
        
 # generic
