--- a/LANGUAGES/CATALA/language.ini
+++ b/LANGUAGES/CATALA/language.ini
@@ -57,6 +57,8 @@ DRAWGMOPT_CPYOK         = còpia finalitzada correctament
 DRAWGMOPT_CPYERR        = Error copiant
 DRAWGMOPT_CPYNOTFND     = no trobat
 
+DRAWGMOPT_GAMEUPDATE    = Actualización de Juego
+
 # DRAW CONFIGS
 DRAWGMCFG_CFGS          = Config. Joc
 DRAWGMCFG_DSK           = Requereix Disc-BR     
@@ -97,6 +99,7 @@ DRAWTOOLS_WITHBDVD      = Con Controladora BDVD
 DRAWTOOLS_NOBDVD        = Sin Controladora BDVD
 DRAWTOOLS_NOBDVD2       = Payload Sin Disco
 DRAWTOOLS_ARCHIVEMAN    = Manejador de Archivos
+DRAWTOOLS_COVERSDOWN    = Descarga de Caratulas
 
 # MAIN - OTHERS
 DRAWCACHE_CACHE         = Esborrat de Fitxers memòria cau
