--- a/LANGUAGES/CHINESE_SIMPLIFIED/language.ini
+++ b/LANGUAGES/CHINESE_SIMPLIFIED/language.ini
@@ -57,6 +57,8 @@ DRAWGMOPT_CPYOK         = 复制成功
 DRAWGMOPT_CPYERR        = 复制失败
 DRAWGMOPT_CPYNOTFND     = 未找到
 
+DRAWGMOPT_GAMEUPDATE    = Game Update
+
 # DRAW CONFIGS
 DRAWGMCFG_CFGS          = 设置游戏
 DRAWGMCFG_DSK           = 需要光盘引导
@@ -107,7 +109,7 @@ DRAWTOOLS_WITHBDVD      = 正常光驱模式
 DRAWTOOLS_NOBDVD        = 屏蔽光驱模式
 DRAWTOOLS_NOBDVD2       = 虚拟光驱模式
 DRAWTOOLS_ARCHIVEMAN    = 文件管理器
-
+DRAWTOOLS_COVERSDOWN    = Covers Download
 
 # MAIN - OTHERS
 DRAWCACHE_CACHE         = 删除缓存工具
