--- a/LANGUAGES/CHINESE_TRADITIONAL/language.ini
+++ b/LANGUAGES/CHINESE_TRADITIONAL/language.ini
@@ -57,6 +57,8 @@ DRAWGMOPT_CPYOK         = 複製成功
 DRAWGMOPT_CPYERR        = 複製失敗
 DRAWGMOPT_CPYNOTFND     = 未找到
 
+DRAWGMOPT_GAMEUPDATE    = Game Update
+
 # DRAW CONFIGS
 DRAWGMCFG_CFGS          = 設置遊戲
 DRAWGMCFG_DSK           = 需要光盤引導
@@ -107,7 +109,7 @@ DRAWTOOLS_WITHBDVD      = 正常光驅模式
 DRAWTOOLS_NOBDVD        = 屏蔽光驅模式
 DRAWTOOLS_NOBDVD2       = 虛擬光驅模式
 DRAWTOOLS_ARCHIVEMAN    = 文件管理器
-
+DRAWTOOLS_COVERSDOWN    = Covers Download
 
 # MAIN - OTHERS
 DRAWCACHE_CACHE         = 刪除緩存工具
