--- a/LANGUAGES/GALEGO/language.ini
+++ b/LANGUAGES/GALEGO/language.ini
@@ -57,6 +57,8 @@ DRAWGMOPT_CPYOK         = Copia rematada correctamente
 DRAWGMOPT_CPYERR        = Erro copiando
 DRAWGMOPT_CPYNOTFND     = Non atopado
 
+DRAWGMOPT_GAMEUPDATE    = Actualización de Juego
+
 # DRAW CONFIGS
 DRAWGMCFG_CFGS          = Configurar Xogo
 DRAWGMCFG_DSK           = Requere Disco-BR
@@ -96,6 +98,7 @@ DRAWTOOLS_WITHBDVD      = Con Controladora BDVD
 DRAWTOOLS_NOBDVD        = Sen Controladora BDVD
 DRAWTOOLS_NOBDVD2       = Payload Sen Disco
 DRAWTOOLS_ARCHIVEMAN    = Manexador de Archivos
+DRAWTOOLS_COVERSDOWN    = Descarga de Caratulas
 
 # MAIN - OTHERS
 DRAWCACHE_CACHE         = Borrado dos Ficheiros da Caché
