--- a/LANGUAGES/CHINESE_SIMPLIFIED/language.ini
+++ b/LANGUAGES/CHINESE_SIMPLIFIED/language.ini
@@ -1,5 +1,5 @@
 [Language]
-VERSION = 2
+VERSION = 2.86
 DESCRIPTION = 简体中文
 
 # VIDEO - ADJUST
@@ -46,18 +46,17 @@ DRAWGMOPT_TSTGAME       = 验证游戏
 DRAWGMOPT_CPYEBOOTGAME  = 导入EBOOT
 DRAWGMOPT_CPYTOFAV      = 添加到收藏夹
 DRAWGMOPT_DELFMFAV      = 从收藏夹中删除
-DRAWGMOPT_EXTRACTISO    = Extract ISO
-DRAWGMOPT_BUILDISO      = Build ISO
-DRAWGMOPT_MKISO         = Select a device to Build the ISO
-DRAWGMOPT_XTISO         = Select a device to Extract the ISO
-DRAWGMOPT_CPYISO        = Select a device to Copy the ISO
+DRAWGMOPT_EXTRACTISO    = 提取ISO
+DRAWGMOPT_BUILDISO      = 建立ISO
+DRAWGMOPT_MKISO         = 选择设备建立ISO
+DRAWGMOPT_XTISO         = 选择设备提取ISO
+DRAWGMOPT_CPYISO        = 选择设备复制ISO
+DRAWGMOPT_GAMEUPDATE    = 游戏更新
 
 DRAWGMOPT_FIXCOMPLETE   = 修复权限完成!
 DRAWGMOPT_CPYOK         = 复制成功
 DRAWGMOPT_CPYERR        = 复制失败
 DRAWGMOPT_CPYNOTFND     = 未找到
-
-DRAWGMOPT_GAMEUPDATE    = Game Update
 
 # DRAW CONFIGS
 DRAWGMCFG_CFGS          = 设置游戏
@@ -109,7 +108,8 @@ DRAWTOOLS_WITHBDVD      = 正常光驱模式
 DRAWTOOLS_NOBDVD        = 屏蔽光驱模式
 DRAWTOOLS_NOBDVD2       = 虚拟光驱模式
 DRAWTOOLS_ARCHIVEMAN    = 文件管理器
-DRAWTOOLS_COVERSDOWN    = Covers Download
+DRAWTOOLS_COVERSDOWN    = 封面下载
+
 
 # MAIN - OTHERS
 DRAWCACHE_CACHE         = 删除缓存工具
